# vmasm

./: CMakeLists.txt  README-en.md  README-ru.md  README.md
example/: VMAsmCLI.cpp
includes/vmasm/: compiler.hpp  disassembler.hpp  syscalls.hpp  vm.hpp  vm_serializer.hpp
src/: compiler.cpp  disassembler.cpp  syscalls.cpp  vm.cpp  vm_serializer.cpp
test/: test.cpp  test.vmasm
